# MyRobot

./: CMakeLists.txt  build.sh  buildOnPi.sh  package.xml  syncHeaders.sh  源.cpp
launch/: drivers.launch  encoder_collabrate.launch  my_robot_drive.launch  velocity_voltage_map.launch
rmcore/: CMakeLists.txt  package.xml  syncHeaders.sh
rmcore/cfg/: config.yaml  plan.rviz  plan.yaml  test.yaml
rmcore/launch/: derivative_test.launch  drivers.launch  encoder_collabrate.launch  experiment_tools.launch  kf_test.launch  plan.launch
rmcore/map/: map.yaml  plan.yaml  test_map.yaml  test_plan.yaml
rmcore/msg/: visual_info.msg
rmcore/src/: command_computer.cpp  command_computer.h  common_types.h  control_scheduler.cpp  control_scheduler.h  driver_node.cpp  gpio.cpp  imu.cpp  imu.h  kf.cpp  kf.h  kf_step.cpp  kf_step.h  remote_controller.cpp  remote_controller.h  ros_controller.cpp  ros_controller.h  ros_encoder.cpp  ros_encoder.h  ros_encoder_data.h  ros_imu.cpp  ros_imu.h  ros_motor.cpp  ros_motor.h  state_manager.cpp  state_manager.h
rmcore/src/kf/: kalman_filter.h  state.h  step.h
rmcore/src/tools/: calc_a.py  derivative_test.cpp  encoder_collabrate.cpp  experiment_tools.cpp  gyro_offset.cpp  kf_test.cpp  map_viewer.py  plan.cpp  remote_control.sh
rmcore/src/utillities/: constants.h  linear_interpolation.h  parameters.h
rmvisual/: CMakeLists.txt  package.xml
rmvisual/msg/: turn.msg
rmvisual/src/: rmvisual_node.cpp
src/: control_scheduler.cpp  control_scheduler.h  controller.cpp  driver_node.cpp  encoder_collabrate.cpp  encoder_driver.cpp  gpio.cpp  gpio.h  gyro_offset.cpp  imu.cpp  imu.h  imu_driver.cpp  kalman_filter.h  kf.cpp  kf.h  kf_step.h  motor_driver.cpp  pwm_writer.cpp  ros_controller.cpp  ros_controller.h  ros_encoder.cpp  ros_encoder.h  ros_encoder_data.h  ros_imu.cpp  ros_imu.h  ros_imu_data.h  ros_motor.cpp  ros_motor.h  spsc_bounded_queue.h
src/kf/: kalman_filter.h  step.h
src/tools/: encoder_collabrate.cpp  experiment_tools.cpp  velocity_voltage_map.cpp
